[package]
name = "krsa-file-generator"
version = "1.0.0-alpha.1"
edition = "2021"
readme = "README.md"
description = ""
rust-version = "1.64.0"
repository = "https://github.com/AliSajid/krsa-file-generator"
license = "MIT OR Apache-2.0"

[lib]
name = "krsa_file_generator_lib"
path = "src/krsa_file_generator_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "krsa-file-generator"
path = "src/krsa_file_generator/main.rs"

[dependencies]


[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
